--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,190 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  height: 80px;
+  width: 100vw;
+  background-color: rgb(76, 85, 85);
+  color: white;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  position: fixed;
+  gap: 50%;
+  z-index: 1;
+}
+
+body {
+  overflow-x: hidden;
+}
+
+.navigation {
+  display: flex;
+  list-style: none;
+  gap: 20px;
+  height: 100%;
+  align-items: center;
+}
+
+.navigation a {
+  text-decoration: none;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.fa-shopping-cart {
+  color: rgb(76, 85, 85);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cartDiv {
+  height: 40px;
+  display: grid;
+  border-radius: 50%;
+  place-content: center;
+  position: relative;
+  width: 40px;
+  background-color: white;
+}
+
+.countItem {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background-color: red;
+  color: white;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  right: -5px;
+  top: -5px;
+}
+
+.cart {
+  height: calc(100vh - 80px);
+  width: 400px;
+  position: fixed;
+  float: right;
+  background-color: rgba(255, 255, 255, 0.97);
+  border-left: 3px solid gray;
+  right: 0;
+  z-index: 1;
+  top: 80px;
+  transform: translateX(400px);
+  transition: all 1s;
+}
+
+.shop {
+  height: calc(100vh - 80px);
+  display: flex;
+  width: 100vw;
+  gap: 40px;
+  flex-wrap: wrap;
+  padding: 130px 50px 50px 50px;
+}
+
+.card {
+  height: 400px;
+  position: relative;
+  width: 250px;
+}
+
+#itemImage {
+  width: 250px;
+  height: 70%;
+}
+
+#title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* number of lines to show */
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+#priceTag {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+#add {
+  width: 150px;
+  color: white;
+  background-color: rgb(76, 85, 85);
+  height: 30px;
+  bottom: 10px;
+  border-radius: 5px;
+  position: absolute;
+  right: 0;
+}
+
+.item {
+  padding-top: 80px;
+}
+
+.cart-item {
+  height: 200px;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  gap: 10px;
+  margin: 10px auto;
+}
+.price-quantity {
+  display: flex;
+  gap: 20px;
+}
+#itemImg {
+  height: 150px;
+  float: left;
+  margin: 10px;
+  width: 150px;
+}
+
+.quantities {
+  display: flex;
+  height: 20px;
+  width: 70px;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 15px;
+}
+
+#quantity {
+  display: inline-block;
+  margin-top: 00px;
+}
+
+.cart-items {
+  overflow: auto;
+  height: 90%;
+  width: 100%;
+  overflow-x: hidden;
+}
+.cart-items::-webkit-scrollbar {
+  width: 16px;
+}
+.total {
+  position: absolute;
+  width: 100%;
+  display: flex;
+  background-color: beige;
+  bottom: 0;
+  justify-content: space-between;
+  background-color: rgba(76, 85, 85, 0.2);
+  align-items: center;
+}
+.total h3 {
+  display: inline-block;
+  margin-left: 20px;
+}
+
+#checkout {
+  height: 30px;
+  width: 120px;
+  background-color: rgb(56, 177, 224);
+  border: none;
+  color: white;
+  margin-right: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px 0 rgb(76, 85, 85);
 }
