--- a/src/App.css
+++ b/src/App.css
@@ -160,8 +160,20 @@ body {
   width: 100%;
   overflow-x: hidden;
 }
-.cart-items::-webkit-scrollbar {
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
   width: 16px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #4c5555;
+  border-radius: 10px;
+  border: 3px solid #ffffff;
 }
 .total {
   position: absolute;
